# roundtable

./: .gitignore  CONFIGURED_MODELS.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  config.json  example_prompt.txt  main.py  plan.md  pyproject.toml
.github/workflows/: ci.yml
core/: __init__.py  config.py  consensus.py  discussion.py  exceptions.py  input_reader.py  llm_client.py  log.py  ollama_client.py  similarity.py  summary_parser.py  tools.py
prompts/: __init__.py  system_prompts.py
scripts/: auto_config.py  update_config.py
storage/: __init__.py  export.py  session.py  utils.py
tests/: test_auto_config.py  test_config.py  test_consensus.py  test_consensus_modes.py  test_context_modes.py  test_discussion.py  test_error_handling.py  test_export.py  test_human_input.py  test_human_input_discussion.py  test_image_validation.py  test_incremental_save.py  test_input_buffer.py  test_main.py  test_ollama_client.py  test_prompts.py  test_reprompt_consensus.py  test_resumption.py  test_rotation.py  test_security.py  test_session.py  test_session_from_dict_missing.py  test_similarity.py  test_summary_parser.py  test_tools.py  test_tui_tasks.py
tui/: __init__.py  app.py  screens.py  styles.css  widgets.py
