[tool.poetry]
name = "roundtable"
version = "0.1.0"
description = "LLM roundtable discussion program with local models"
authors = ["James <james@example.com>"]
readme = "README.md"
packages = [{include = "core"}, {include = "tui"}, {include = "storage"}, {include = "prompts"}]

[tool.poetry.dependencies]
python = "^3.10"
textual = "^0.50.0"
httpx = "^0.27.0"
numpy = "^1.26.0"
pydantic = "^2.6.0"
pydantic-settings = "^2.2.0"
aiofiles = "^23.2.0"
rich = "^13.7.0"
scikit-learn = "^1.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
black = "^24.0.0"
ruff = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
roundtable = "main:main"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::RuntimeWarning",
]
